# QCrossPlatformSerial-Example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/values/: strings.xml
android/src/org/qtcrossplatformserial/: JniUsbSerial.java  SerialInputOutputManager.java  UsbSerialManager.java
android/src/org/qtserial/: JniUsbSerial.java  SerialInputOutputManager.java  UsbSerialManager.java
qml/: main.qml  qml.qrc
src/: SerialPortCommunicator.cpp  SerialPortCommunicator.hpp  SerialPortManager.cpp  SerialPortManager.hpp  main.cpp
tools/: build.bat  phone_deploy.bat
